# capstone_group_8

./: .gitignore  Admin-Add.html  Admin-Home.html  Admin-Login.html  Admin-Modify.html  Admin-Search-Results.html  Admin-Search.html  Basic-Home.html  Basic-Results2.html  Basic-Search.html  Dockerfile  Home.html  README.md  __init__.py  compose.yaml  daCSS.css  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
auth/: authContext.py
auth/modules/: authConnection.py  authVerification.py
avs_ui/: app.py  avsRequests.py
avs_ui/components/: addComponents.py  dynamicComponents.py  searchComponents.py
avs_ui/config/: config.py
avs_ui/templates/: Admin-Add.html  Admin-Home.html  Admin-Login.html  Admin-Modify.html  Admin-Search-Results.html  Admin-Search.html  Basic-Home.html  Basic-Results2.html  Basic-Search.html  Home.html  daCSS.css  style.css
connections/: __init__.py  redisConnector.py
connections/models/api/: addModels.py
connections/models/db/: authModels.py
connections/utils/: makeFuzzy.py
db/: redisConnector.py
docker-compose/: compose.yaml
models/api/: addModels.py  searchModels.py
models/db/: addressModels.py  authModels.py
src/app/: Dockerfile  app.py  compose.yaml  requirements.txt
src/app/auth/: auth.py  authContext.py
src/app/blueprints/: address.py  demo.py  users.py
src/app/db/: redisBackupManager.py  redisConnector.py  redisRestore.py
src/app/utils/: makeFuzzy.py  miscUtils.py  modelUtils.py  (+1 more)
src/tests/: apiTests.py
static/: project_2_addresses.xlsx  zips.csv
utils/: makeFuzzy.py  requestUtils.py
(+12 files in other folders)
